# repense-assistente

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  configure-webhook.sh  docker-compose.yml  memory.py  pyproject.toml  setup.cfg
api/: Dockerfile  app.py  main.py  memory.py
app/: Dockerfile  Repense.py  home.py
app/assets/: teste.json
app/pages/: Assistente.py  Configurações.py  Imagens.py  teste_volume.py
app/prompts/: atendimento.py  templates.py
installer/windows/: INSTRUCOES.md  Makefile  README.md  build.bat  build.py  create_icon.py  installer.py  requirements.txt  startup.py  updater.py  version_info.txt
src/: image.py
