[project]
name = "repense-assistente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "redis>=5.2.1",
    "repenseai>=4.0.13",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pylint>=3.3.6",
    "ruff>=0.11.7",
]
