[project]
name = "repense-assistente"
version = "0.1.0"
description = "Assistente virtual para negócios"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "redis>=5.2.1",
    "repenseai>=4.0.13",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "black>=24.3.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pre-commit>=3.7.0",
    "pylint>=3.3.6",
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "ANN", "RUF"]
ignore = ["E501", "ANN401", "ANN101"]

[tool.ruff.lint.isort]
known-first-party = ["repense_assistente"]
